Add Bitcoin to admin panel form

--- a/src/main/resources/templates/exchange.html
+++ b/src/main/resources/templates/exchange.html
@@ -108,6 +108,22 @@
 											<td><label><input type="text" th:field="*{metal.platinum}" class="td-value"/></label></td>
 											<td><label><input type="text" th:field="*{metal.palladium}" class="td-value"/></label></td>
 										</tr>
+										<tr>
+											<td>Bitcoin</td>
+											<td><label><input type="text" th:field="*{bitcoin.date}" size="10"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.usd}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.eur}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.gbp}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.cny}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.rub}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.uah}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.byn}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.kzt}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.gold}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.silver}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.platinum}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.palladium}" class="td-value"/></label></td>
+										</tr>
 									</table>
 									<table class="exchange-table">
 										<tr>
@@ -199,6 +215,21 @@
 											<td><label><input type="text" th:field="*{metal.prevSilver}" class="td-value"/></label></td>
 											<td><label><input type="text" th:field="*{metal.prevPlatinum}" class="td-value"/></label></td>
 											<td><label><input type="text" th:field="*{metal.prevPalladium}" class="td-value"/></label></td>
+										</tr>
+										<tr>
+											<td>Bitcoin</td>
+											<td><label><input type="text" th:field="*{bitcoin.prevUsd}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevEur}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevGbp}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevCny}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevRub}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevUah}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevByn}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevKzt}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevGold}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevSilver}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevPlatinum}" class="td-value"/></label></td>
+											<td><label><input type="text" th:field="*{bitcoin.prevPalladium}" class="td-value"/></label></td>
 										</tr>
 									</table>
 									<p>
