Separate MotoFan.Ru user birthdays from greetings setting

--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -94,6 +94,10 @@
 									<label for="greeting-checkbox">BGreetings</label>
 								</div>
 								<div>
+									<input id="birthday-checkbox" type="checkbox" th:field="*{birthday}"/>
+									<label for="birthday-checkbox">BBirthday</label>
+								</div>
+								<div>
 									<input id="silent-checkbox" type="checkbox" th:field="*{silent}"/>
 									<label for="silent-checkbox">BSilent</label>
 								</div>
