Add button captcha option

--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -98,6 +98,10 @@
 									<label for="birthday-checkbox">BBirthday</label>
 								</div>
 								<div>
+									<input id="captcha-checkbox" type="checkbox" th:field="*{captcha}"/>
+									<label for="captcha-checkbox">BCaptcha</label>
+								</div>
+								<div>
 									<input id="silent-checkbox" type="checkbox" th:field="*{silent}"/>
 									<label for="silent-checkbox">BSilent</label>
 								</div>
